package study.abstractfactory.obstacle;

public abstract class Obstacle {

  public abstract void block();
}
